--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -206,11 +206,18 @@ body {
   }
   
   input[type="radio"] {
-    display: none;
+    // display: none;
+    position: relative;
+    background-color: black;
     
     &:checked+.book__page {
       transition: transform 0.9s cubic-bezier(0.645, 0.045, 0.355, 1);
       transform: rotateY(-180deg);
     }
   }
+
+  // .transform-page {
+  //   transition: transform 0.9s cubic-bezier(0.645, 0.045, 0.355, 1);
+  //   transform: rotateY(-180deg);
+  // }
 }
