--- a/src/components/organisms/Header/Index.module.scss
+++ b/src/components/organisms/Header/Index.module.scss
@@ -1,7 +1,5 @@
 .header {
     [class~="header-top"] {
-        display: flex;
-        align-items: center;
         color: #fff;
         padding-top: 1.5rem;
         padding-bottom: 1.5rem;
@@ -21,8 +19,6 @@
                 li {
                     display: inline-block;
                     border-left: 2px solid #fff;
-                    padding-left: 0.5rem;
-                    padding-right: 0.5rem;
                 }
 
                 li:first-child {
@@ -41,8 +37,6 @@
                 }
             }
         }
-
-        @apply justify-center lg:justify-between;
     }
 
     /*-------------------------------------HEADER MIDDLE - START-------------------------------------------*/
@@ -145,9 +139,10 @@
         @apply py-3 lg:py-12 border-b border-neutral-300 lg:border-none;
     }
     input[class~="txt-search"] {
-        min-width: 320px;
         padding: 8px 16px;
         border: none;
+
+        @apply min-w-0 lg:min-w-[320px];
     }
     [class~="btn-search"] {
         font-size: 20px;
