--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -148,8 +148,7 @@ a:hover, button.block-link:hover {
 }
 
 section {
-  padding-left: 2.5rem;
-  padding-right: 2.5rem;
+  @apply px-4 md:px-8 lg:px-16;
 }
 
 img {
