commit - body + footer

--- a/src/components/organisms/Header/Index.module.scss
+++ b/src/components/organisms/Header/Index.module.scss
@@ -57,6 +57,7 @@
     [class~="customer"] {
         position: relative;
         text-align: right;
+        display: flex;
     }
     [class~="block-user"], [class~="block-cart"], [class~="block-link"] {
         display: inline-block;
