--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -1,149 +1,166 @@
 /* roboto-regular - latin */
 @font-face {
   font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
-  font-family: 'Roboto';
+  font-family: "Roboto";
   font-style: normal;
   font-weight: 400;
-  src: url('/assets/fonts/roboto/roboto-v30-latin-regular.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+  src: url("/assets/fonts/roboto/roboto-v30-latin-regular.woff2")
+    format("woff2"); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
 }
 /* roboto-italic - latin */
 @font-face {
   font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
-  font-family: 'Roboto';
+  font-family: "Roboto";
   font-style: italic;
   font-weight: 400;
-  src: url('/assets/fonts/roboto/roboto-v30-latin-italic.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+  src: url("/assets/fonts/roboto/roboto-v30-latin-italic.woff2") format("woff2"); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
 }
 /* roboto-500 - latin */
 @font-face {
   font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
-  font-family: 'Roboto';
+  font-family: "Roboto";
   font-style: normal;
   font-weight: 500;
-  src: url('/assets/fonts/roboto/roboto-v30-latin-500.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+  src: url("/assets/fonts/roboto/roboto-v30-latin-500.woff2") format("woff2"); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
 }
 /* roboto-500italic - latin */
 @font-face {
   font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
-  font-family: 'Roboto';
+  font-family: "Roboto";
   font-style: italic;
   font-weight: 500;
-  src: url('/assets/fonts/roboto/roboto-v30-latin-500italic.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+  src: url("/assets/fonts/roboto/roboto-v30-latin-500italic.woff2")
+    format("woff2"); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
 }
 /* roboto-700 - latin */
 @font-face {
   font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
-  font-family: 'Roboto';
+  font-family: "Roboto";
   font-style: normal;
   font-weight: 700;
-  src: url('/assets/fonts/roboto/roboto-v30-latin-700.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+  src: url("/assets/fonts/roboto/roboto-v30-latin-700.woff2") format("woff2"); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
 }
 /* roboto-700italic - latin */
 @font-face {
   font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
-  font-family: 'Roboto';
+  font-family: "Roboto";
   font-style: italic;
   font-weight: 700;
-  src: url('/assets/fonts/roboto/roboto-v30-latin-700italic.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+  src: url("/assets/fonts/roboto/roboto-v30-latin-700italic.woff2")
+    format("woff2"); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
 }
 /* roboto-900 - latin */
 @font-face {
   font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
-  font-family: 'Roboto';
+  font-family: "Roboto";
   font-style: normal;
   font-weight: 900;
-  src: url('/assets/fonts/roboto/roboto-v30-latin-900.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+  src: url("/assets/fonts/roboto/roboto-v30-latin-900.woff2") format("woff2"); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
 }
 /* roboto-900italic - latin */
 @font-face {
   font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
-  font-family: 'Roboto';
+  font-family: "Roboto";
   font-style: italic;
   font-weight: 900;
-  src: url('/assets/fonts/roboto/roboto-v30-latin-900italic.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+  src: url("/assets/fonts/roboto/roboto-v30-latin-900italic.woff2")
+    format("woff2"); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
 }
 
 /* roboto-regular - vietnamese */
 @font-face {
   font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
-  font-family: 'Roboto';
+  font-family: "Roboto";
   font-style: normal;
   font-weight: 400;
-  src: url('/assets/fonts/roboto/roboto-v30-vietnamese-regular.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+  src: url("/assets/fonts/roboto/roboto-v30-vietnamese-regular.woff2")
+    format("woff2"); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
 }
 /* roboto-italic - vietnamese */
 @font-face {
   font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
-  font-family: 'Roboto';
+  font-family: "Roboto";
   font-style: italic;
   font-weight: 400;
-  src: url('/assets/fonts/roboto/roboto-v30-vietnamese-italic.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+  src: url("/assets/fonts/roboto/roboto-v30-vietnamese-italic.woff2")
+    format("woff2"); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
 }
 /* roboto-500 - vietnamese */
 @font-face {
   font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
-  font-family: 'Roboto';
+  font-family: "Roboto";
   font-style: normal;
   font-weight: 500;
-  src: url('/assets/fonts/roboto/roboto-v30-vietnamese-500.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+  src: url("/assets/fonts/roboto/roboto-v30-vietnamese-500.woff2")
+    format("woff2"); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
 }
 /* roboto-500italic - vietnamese */
 @font-face {
   font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
-  font-family: 'Roboto';
+  font-family: "Roboto";
   font-style: italic;
   font-weight: 500;
-  src: url('/assets/fonts/roboto/roboto-v30-vietnamese-500italic.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+  src: url("/assets/fonts/roboto/roboto-v30-vietnamese-500italic.woff2")
+    format("woff2"); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
 }
 /* roboto-700 - vietnamese */
 @font-face {
   font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
-  font-family: 'Roboto';
+  font-family: "Roboto";
   font-style: normal;
   font-weight: 700;
-  src: url('/assets/fonts/roboto/roboto-v30-vietnamese-700.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+  src: url("/assets/fonts/roboto/roboto-v30-vietnamese-700.woff2")
+    format("woff2"); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
 }
 /* roboto-700italic - vietnamese */
 @font-face {
   font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
-  font-family: 'Roboto';
+  font-family: "Roboto";
   font-style: italic;
   font-weight: 700;
-  src: url('/assets/fonts/roboto/roboto-v30-vietnamese-700italic.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+  src: url("/assets/fonts/roboto/roboto-v30-vietnamese-700italic.woff2")
+    format("woff2"); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
 }
 /* roboto-900 - vietnamese */
 @font-face {
   font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
-  font-family: 'Roboto';
+  font-family: "Roboto";
   font-style: normal;
   font-weight: 900;
-  src: url('/assets/fonts/roboto/roboto-v30-vietnamese-900.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+  src: url("/assets/fonts/roboto/roboto-v30-vietnamese-900.woff2")
+    format("woff2"); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
 }
 /* roboto-900italic - vietnamese */
 @font-face {
   font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
-  font-family: 'Roboto';
+  font-family: "Roboto";
   font-style: italic;
   font-weight: 900;
-  src: url('/assets/fonts/roboto/roboto-v30-vietnamese-900italic.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+  src: url("/assets/fonts/roboto/roboto-v30-vietnamese-900italic.woff2")
+    format("woff2"); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
 }
 
-@import 'tailwindcss/base';
-@import 'tailwindcss/components';
-@import 'tailwindcss/utilities';
+@import "tailwindcss/base";
+@import "tailwindcss/components";
+@import "tailwindcss/utilities";
 
-body{
+body {
   margin: 0 auto;
   color: #666;
   font-size: 16px;
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
 }
-a, button.block-link, .label-block-link {
+a,
+button.block-link,
+.label-block-link {
   color: #0a0a0a;
   text-decoration: none;
-  transition: color 0.25s, border-color 0.25s, background-color 0.25s, opacity 0.25s, width 0.25s ease 0s;
+  transition: color 0.25s, border-color 0.25s, background-color 0.25s,
+    opacity 0.25s, width 0.25s ease 0s;
 }
-a:hover, button.block-link:hover, .label-block-link:hover {
+a:hover,
+button.block-link:hover,
+.label-block-link:hover {
   color: #65a15a;
 }
 
@@ -160,10 +177,11 @@ img {
   height: auto;
 }
 
-.form-login > label, .input-group > label {
-    font-size: 12px;
-    margin-bottom: 4px;
-    color: #999;
+.form-login > label,
+.input-group > label {
+  font-size: 12px;
+  margin-bottom: 4px;
+  color: #999;
 }
 
 input[type="checkbox"] {
@@ -189,27 +207,44 @@ input[type="checkbox"] + span {
 
 input[type="checkbox"] + span.checked {
   &::after {
-      content: "\f00c";
-      font-family: 'FontAwesome', sans-serif;
-      display: inline-block;
-      position: absolute;
-      left: 4px;
-      top: -3px;
-      color: #65a15a;
-      font-size: 13px;
+    content: "\f00c";
+    font-family: "FontAwesome", sans-serif;
+    display: inline-block;
+    position: absolute;
+    left: 4px;
+    top: -3px;
+    color: #65a15a;
+    font-size: 13px;
   }
 }
 
-input[type="text"]:focus, input[type="password"]:focus, button:focus, select:focus, input[type="checkbox"]:focus, input[type="text"]:focus-visible, input[type="password"]:focus-visible, button:focus-visible, select:focus-visible, input[type="checkbox"]:focus-visible {
+input[type="text"]:focus,
+input[type="password"]:focus,
+input[type="email"]:focus,
+button:focus,
+select:focus,
+input[type="checkbox"]:focus,
+input[type="text"]:focus-visible,
+input[type="password"]:focus-visible,
+input[type="email"]:focus-visible,
+button:focus-visible,
+select:focus-visible,
+input[type="checkbox"]:focus-visible {
   @apply ring-0 outline-none;
 }
 
-button, button[type="button"], input[type="submit"], input[type="button"]{
+button,
+button[type="button"],
+input[type="submit"],
+input[type="button"] {
   color: #ffffff;
-  transition: color 0.25s, border-color 0.25s, background-color 0.25s, opacity 0.25s, width 0.25s ease 0s;
+  transition: color 0.25s, border-color 0.25s, background-color 0.25s,
+    opacity 0.25s, width 0.25s ease 0s;
 }
 
-.header-top, .btn-search, .count {
+.header-top,
+.btn-search,
+.count {
   background-color: #65a15a;
 }
 
@@ -226,10 +261,10 @@ button, button[type="button"], input[type="submit"], input[type="button"]{
   border: 1px solid #aaa;
   border-radius: 5px;
   background-color: #fff;
-  background: linear-gradient(#fff 20%,#f6f6f6 50%,#eee 52%,#f4f4f4 100%);
+  background: linear-gradient(#fff 20%, #f6f6f6 50%, #eee 52%, #f4f4f4 100%);
   background-clip: padding-box;
-  -webkit-box-shadow: 0 0 3px #fff inset, 0 1px 1px rgba(0,0,0,.1);
-  box-shadow: 0 0 3px #fff inset, 0 1px 1px rgba(0,0,0,.1);
+  -webkit-box-shadow: 0 0 3px #fff inset, 0 1px 1px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 0 3px #fff inset, 0 1px 1px rgba(0, 0, 0, 0.1);
   color: #444;
   text-decoration: none;
   white-space: nowrap;
@@ -249,14 +284,14 @@ button, button[type="button"], input[type="submit"], input[type="button"]{
   top: 0;
   right: 0;
   display: block;
-  width: calc(100%/6);
+  width: calc(100% / 6);
   height: 100%;
 }
 
 .chosen-container-single .chosen-single .chosen-dropdown-btn b {
-    display: block;
-    width: 100%;
-    height: 100%;
+  display: block;
+  width: 100%;
+  height: 100%;
 }
 
 .swiper {
@@ -264,8 +299,123 @@ button, button[type="button"], input[type="submit"], input[type="button"]{
 }
 
 .swiper-slide {
-  height: auto
+  height: auto !important;
 }
 .swiper-wrapper {
-  align-items: stretch
+  align-items: stretch;
+}
+
+.title {
+  @apply relative text-3xl leading-loose mb-8 uppercase text-black font-bold;
+
+  &::before {
+    content: "";
+    position: absolute;
+    width: 80px;
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    @apply border-b-4 border-b-nmp-primary;
+  }
+}
+
+.widget-title {
+  @apply relative text-sm leading-loose mb-8 uppercase text-black font-bold;
+
+  &::before {
+    content: "";
+    position: absolute;
+    width: 40px;
+    bottom: 0;
+    left: 0;
+    @apply border-b-2 border-b-nmp-primary;
+  }
+}
+
+.description {
+  margin: 0 0 20px;
+  max-width: 290px;
+}
+
+footer {
+  color: #777;
+
+  .footer-content {
+    padding-top: 60px;
+    padding-bottom: 30px;
+    background-color: #f3f3f3;
+  }
+}
+
+.quick-menu {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+
+  .quick-menu-item {
+    line-height: 26px;
+    padding-top: 8px;
+    padding-bottom: 8px;
+
+    > a {
+      color: #777 !important;
+    }
+  }
+}
+
+.socials-list {
+  list-style: none;
+}
+
+.socials-list li a {
+  font-size: 20px;
+  display: inline-block;
+  position: relative;
+  z-index: 1;
+  margin-right: 20px;
+  color: #ababab;
+}
+
+.back-to-top {
+  width: 42px;
+  height: 42px;
+  line-height: 42px;
+  position: fixed;
+  bottom: 52px;
+  right: 35px;
+  text-align: center;
+  transition: all 0.4s ease 0s;
+  z-index: 999;
+  text-transform: uppercase;
+  font-weight: 700;
+  letter-spacing: 0.01em;
+  font-size: 10px;
+
+  &::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background-color: #c7c8c1;
+    border-radius: 50% 50% 0 50%;
+    transform: rotate(-135deg);
+  }
+
+  &:hover {
+    &::after {
+      @apply bg-nmp-primary;
+    }
+  }
+
+  span {
+    position: relative;
+    z-index: 2;
+    color: #fff;
+  }
+
+  &:not(.active) {
+    transform: scale(0);
+  }
 }
