--- a/src/components/organisms/Header/Navbar/Index.module.scss
+++ b/src/components/organisms/Header/Navbar/Index.module.scss
@@ -18,7 +18,7 @@
 
         [class~="block-content"] {
             box-shadow: 0 3px 18px 0 rgba(0, 0, 0, 0.1);
-            @apply bg-white absolute w-full transition-opacity duration-100 ease-in;
+            @apply bg-white absolute w-full transition-opacity duration-100 ease-in z-[100];
         }
     }
 
