--- a/src/components/molecules/ProCard/Index.module.scss
+++ b/src/components/molecules/ProCard/Index.module.scss
@@ -39,55 +39,68 @@
     @apply bg-nmp-primary;
   }
 
-  [class~="group-button"] {
+  [class~="sold-out"] {
     position: absolute;
-    left: 50%;
-    top: 50%;
-    // transform: translate(-50%, -50%);
-    transform: translateX(-50%);
-    margin-top: 20px;
-    background-color: #fff;
+    top: 0;
+    left: 0;
+    z-index: 1;
+    color: #fff;
+    display: table;
+    font-size: 12px;
+    font-weight: 500;
+    text-transform: capitalize;
+    margin-bottom: 5px;
+    padding-left: 6px;
+    padding-right: 6px;
+    min-width: 54px;
+    text-align: center;
+    background-color: #b6b6b6;
+  }
+
+  [class~="group-button"] {
     box-shadow: 0 0 9px 0 rgba(0, 0, 0, 0.05);
-    transition: all 0.25s ease 0s;
-    border-radius: 30px;
     white-space: nowrap;
     padding: 2px 5px;
-    color: #0a0a0a;
+
+    @apply static bg-nmp-primary text-white mt-0 text-center lg:absolute lg:mt-5 lg:bg-white lg:text-black lg:top-1/2 lg:left-1/2 lg:-translate-x-1/2 lg:rounded-[30px] lg:transition-all lg:duration-["0.25s"] lg:ease-in-out;
 
     [class~="action-button"] {
-        font-size: 0;
-        display: inline-block;
-        vertical-align: top;
-        width: 40px;
-        height: 40px;
-        line-height: 40px;
-        text-align: center;
+      position: relative;
+      font-size: 0;
+      display: inline-block;
+      vertical-align: top;
+      width: 40px;
+      height: 40px;
+      line-height: 40px;
+      text-align: center;
+
+      @apply lg:text-black lg:hover:text-nmp-primary;
     }
 
     [class~="add-wishlist-button"] {
-        &::before {
-            font-family: 'FontAwesome', sans-serif;
-            content: '\f08a';
-            font-weight: normal;
-            font-size: 20px;
-        }
+      &::before {
+        font-family: "FontAwesome", sans-serif;
+        content: "\f08a";
+        font-weight: normal;
+        font-size: 20px;
+      }
     }
 
     [class~="quick-view-button"] {
-        &::before {
-            font-family: 'Flaticon', sans-serif;
-            content: "\f12d";
-            font-size: 20px;
-            vertical-align: middle;
-        }
+      &::before {
+        font-family: "Flaticon", sans-serif;
+        content: "\f12d";
+        font-size: 20px;
+        vertical-align: middle;
+      }
     }
 
     [class~="add-to-cart-button"] {
-        &::before {
-            font-family: 'Flaticon', sans-serif;
-            content: "\f137";
-            font-size: 20px;
-        }
+      &::before {
+        font-family: "Flaticon", sans-serif;
+        content: "\f137";
+        font-size: 20px;
+      }
     }
   }
 }
@@ -101,34 +114,34 @@
     @apply mb-3 leading-6;
 
     > span {
-        display: inline-block;
-        min-width: 49px;
-        height: 49px;
-        color: #fff;
-        background-color: #65a15a;
-        padding: 9px 3px;
-        text-align: center;
-        font-family: 'Montserrat', sans-serif;
-        font-weight: 700;
-        margin-bottom: 7px;
-        margin-right: 7px;
-        position: relative;
+      display: inline-block;
+      min-width: 49px;
+      height: 49px;
+      color: #fff;
+      background-color: #65a15a;
+      padding: 9px 3px;
+      text-align: center;
+      font-family: "Montserrat", sans-serif;
+      font-weight: 700;
+      margin-bottom: 7px;
+      margin-right: 7px;
+      position: relative;
 
-        :last-child {
-            margin-right: 0;
-        }
+      :last-child {
+        margin-right: 0;
+      }
 
-        [class~="number"] {
-            display: block;
-            font-size: 12px;
-            line-height: 1;
-        }
+      [class~="number"] {
+        display: block;
+        font-size: 12px;
+        line-height: 1;
+      }
 
-        [class~="text"] {
-            display: block;
-            font-size: 10px;
-            text-transform: uppercase;
-        }
+      [class~="text"] {
+        display: block;
+        font-size: 10px;
+        text-transform: uppercase;
+      }
     }
   }
   [class~="product-rating-wrapper"] {
